Proyecto Django, agregar, listar, actualizar registros

--- a/inv/templates/inv/categoria_list.html
+++ b/inv/templates/inv/categoria_list.html
@@ -12,7 +12,7 @@
       </a>
       <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
         <div class="dropdown-header">Acciones</div>
-        <a class="dropdown-item" href="#">Action</a>
+        <a class="dropdown-item" href="{% url 'inv:categoria_new' %}"><i class="far fa-calendar-plus"></i>Nueva</a>
         <a class="dropdown-item" href="#">Another action</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="#">Something else here</a>
@@ -38,11 +38,11 @@
           <tr>
             <td>{{ item.id }}</td>
             <td>{{ item.descripcion }}</td>
-            <td>{{ item.estado }}</td>
+            <td>{{ item.estado|yesno:"Activo,Inactivo" }}</td>
             <td>{{ item.fc|date:'d/m/Y' }}</td>
             <td>{{ item.fm }}</td>
             <td>
-              <a href="#" class="btn btn-warning btn-circle" role="button"><i class="far fa-edit"></i></a>
+              <a href="{% url 'inv:categoria_edit' item.id %}" class="btn btn-warning btn-circle" role="button"><i class="far fa-edit"></i></a>
               <a href="#" class="btn btn-danger btn-circle" role="button"><i class="far fa-trash-alt"></i></a>
             </td>
           </tr>
@@ -57,4 +57,10 @@
 {% endblock %}
 
 {% block js_page %}
+<script>
+// Call the dataTables jQuery plugin
+  $(document).ready(function() {
+    $('.table').DataTable();
+  });
+</script>
 {% endblock %}
