--- a/inv/templates/inv/subcategoria_list.html
+++ b/inv/templates/inv/subcategoria_list.html
@@ -4,7 +4,7 @@
 <div class="card shadow mb-4">
   <!-- Card Header - Dropdown -->
   <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-    <h6 class="m-0 font-weight-bold text-primary">Listado de Categorias</h6>
+    <h6 class="m-0 font-weight-bold text-primary">Listado de SubCategorias</h6>
     <div class="dropdown no-arrow">
       <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
         aria-haspopup="true" aria-expanded="false">
@@ -12,20 +12,18 @@
       </a>
       <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
         <div class="dropdown-header">Acciones</div>
-        <a class="dropdown-item" href="{% url 'inv:categoria_new' %}"><i class="far fa-calendar-plus"></i>Nueva</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Something else here</a>
+        <a class="dropdown-item" href="{% url 'inv:subcategoria_new' %}"><i class="far fa-calendar-plus"></i>Nueva</a>
       </div>
     </div>
   </div>
   <!-- Card Body -->
   <div class="card-body">
     {% if not obj %}
-      <div class="alert alert-info">No hay Categorias</div>
+      <div class="alert alert-info">No hay SubCategorias</div>
     {% else %}
     <table class="table table-striped table-hover">
       <thead>
+        <th>Categoria</th>
         <th>Id</th>
         <th>Descripcion</th>
         <th>Estado</th>
@@ -36,14 +34,15 @@
       <tbody>
         {% for item in obj %}
           <tr>
+            <td>{{ item.categoria }}</td>
             <td>{{ item.id }}</td>
             <td>{{ item.descripcion }}</td>
             <td>{{ item.estado|yesno:"Activo,Inactivo" }}</td>
             <td>{{ item.fc|date:'d/m/Y' }}</td>
             <td>{{ item.fm }}</td>
             <td>
-              <a href="{% url 'inv:categoria_edit' item.id %}" class="btn btn-warning btn-circle" role="button"><i class="far fa-edit"></i></a>
-              <a href="{% url 'inv:categoria_del' item.id %}" class="btn btn-danger btn-circle" role="button"><i class="far fa-trash-alt"></i></a>
+              <a href="{% url 'inv:subcategoria_edit' item.id %}" class="btn btn-warning btn-circle" role="button"><i class="far fa-edit"></i></a>
+              <a href="{% url 'inv:subcategoria_del' item.id %}" class="btn btn-danger btn-circle" role="button"><i class="far fa-trash-alt"></i></a>
             </td>
           </tr>
         {% endfor %}
