--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -68,7 +68,8 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Catalogos de Inventarios</h6>
             <a class="collapse-item" href="{% url 'inv:categoria_list' %}">Categorias</a>
-            <a class="collapse-item" href="cards.html">Cards</a>
+            <a class="collapse-item" href="{% url 'inv:subcategoria_list' %}">SubCategorias</a>
+
           </div>
         </div>
       </li>
