--- a/bases/templates/bases/login.html
+++ b/bases/templates/bases/login.html
@@ -64,5 +64,24 @@
 
 {% endblock %}
 
-                      <!-- <button type="submit" class="btn btn-primary btn-user btn-block">Acceder</button> -->
-                      <a href="index.html" class="btn btn-primary btn-user btn-block">Entrar</a>
+{% block js_page %} 
+
+<script>
+  {% if form.errors %}
+      {% for field in form %}
+          {% if field.errors %}
+              {% for error in field.errors %}
+                mensaje('{{ error|escape }}','red');
+              {% endfor %}
+          {% endif %}
+      {% endfor %}
+  
+      {% if form.non_field_errors%}
+          {% for error in form.non_field_errors %}
+            mensaje('{{ error|escape }}','red');
+          {% endfor %}
+      {% endif %}
+  {% endif %}
+</script>
+
+{% endblock js_page %}
