--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -71,14 +71,25 @@
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Catalogos de Inventarios</h6>
-            <a class="collapse-item" href="{% url 'inv:categoria_list' %}">Categorias</a>
+            {% if perms.inv.view_categoria %}
+              <a class="collapse-item" href="{% url 'inv:categoria_list' %}">Categorias</a>
+            {% endif %}
+            {% if perms.inv.view_subcategoria %}
             <a class="collapse-item" href="{% url 'inv:subcategoria_list' %}">SubCategorias</a>
+            {% endif %}
+            {% if perms.inv.view_marca %}
             <a class="collapse-item" href="{% url 'inv:marca_list' %}">Marca</a>
+            {% endif %}
+            {% if perms.inv.view_unidadmedida %}
             <a class="collapse-item" href="{% url 'inv:um_list' %}">Unida de Medida</a>
+            {% endif %}
+            {% if perms.cmp.view_producto %}
             <a class="collapse-item" href="{% url 'inv:producto_list' %}">Producto</a>
+            {% endif %}
+
             <h6 class="collapse-header">Catálogos de Compras:</h6>
             
-            {% if perms.cmp.view_proveedor %}
+            {% if perms.inv.view_proveedor %}
             <a class="collapse-item" href="{% url 'cmp:proveedor_list' %}">Proveedores</a>
             {% endif %}
           </div>
@@ -452,6 +463,14 @@
         content:msg
       });
     }
+
+    {% if messages %}
+
+      {% for message in messages %}
+        mensaje('{{ message}}');
+      {% endfor %}
+
+    {% endif %}
 
   </script>
 
