--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -95,6 +95,20 @@
           </div>
         </div>
       </li>
+
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseCompras" aria-expanded="true" aria-controls="collapseCompras">
+          <i class="fas fa-fw fa-truck"></i>
+          <span>Movimientos</span>
+        </a>
+        <div id="collapseCompras" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+          <div class="bg-white py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Entradas</h6>
+            <a class="collapse-item" href="{% url 'cmp:compras_list' %}">Compras</a>
+          </div>
+        </div>
+      </li>
+
       <!-- Nav Item - Utilities Collapse Menu
        <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
@@ -177,9 +191,6 @@
         <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
           <ul class="navbar-nav ml-auto">
-
-
-
 
             <div class="topbar-divider d-none d-sm-block"></div>
 
