Proyecto Django, mejorando modulo de compras

--- a/cmp/templates/cmp/compras_list.html
+++ b/cmp/templates/cmp/compras_list.html
@@ -11,7 +11,7 @@
       </a>
       <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
         <div class="dropdown-header">Acciones:</div>
-        <a class="dropdown-item" href="#"><i class="far fa-calendar-plus"></i> Nueva</a>
+        <a class="dropdown-item" href="{% url 'cmp:compras_new' %}"><i class="far fa-calendar-plus"></i> Nueva</a>
       </div>
     </div>
   </div>
