--- a/fac/templates/fac/cliente_list.html
+++ b/fac/templates/fac/cliente_list.html
@@ -20,14 +20,26 @@
     {% if not obj %}
     <div class="alert alert-info">No hay clientes</div>
     {% endif %}
-    <table class="table table-striped table-hover dt-responsive nowrap" style="width:100%">
+    <div class="buttons-toolbar">
+      <a class="dropdown-item" onclick="return abrir_modal('{% url 'fac:cliente_new' %}')" href="#"><i class="far fa-calendar-plus"></i> Nuevo</a>
+    </div>
+
+    <table
+      id='table'
+      data-toggle="table"
+      data-pagination="true"
+      data-search="true"
+      data-show-columns="true"
+      data-show-toggle="true"
+      data-toolbar=".buttons-toolbar"
+    >
       <thead>
-        <th>Id</th>        
-        <th>Nombre</th>
-        <th>Apellidos</th>
-        <th>Tipo</th>
-        <th>Teléfono</th>
-        <th>Estado</th>
+        <th data-sortable="true" data-field="id">Id</th>        
+        <th data-sortable="true" data-field="nombres">Nombres</th>
+        <th data-sortable="true" data-field="apellidos">Apellidos</th>
+        <th data-sortable="true" data-field="tipo">Tipo</th>
+        <th data-field="telefono">Teléfono</th>
+        <th data-field="estado">Estado</th>
         <th class="all">Acciones</th>
       </thead>
       <tbody>
@@ -38,7 +50,17 @@
           <td>{{item.apellidos}}</td>
           <td>{{ item.tipo }}</td>
           <td>{{ item.celular }}</td>
-          <td>{{item.estado|yesno:"Activo,Inactivo"}}</td>
+          <td>{#item.estado|yesno:"Activo,Inactivo"#}
+            <div onclick="inactivar({{item.id}})">
+              {% if item.estado %}
+              <i class="far fa-thumbs-up text-primary"></i>
+
+            {% else %}
+              <i class="far fa-thumbs-down text-danger"></i>            
+            {% endif %}
+            </div>
+
+          </td>
           <td>
             <button class="btn btn-warning btn-circle" onclick="return abrir_modal('{% url 'fac:cliente_edit' item.id %}')"><i class="far fa-edit"></i></button>
             <!-- <button class="btn btn-warning btn-circle" onclick="return abrir_modal('{# url 'cmp:proveedor_inactivar' item.id #}')"> -->
@@ -54,9 +76,37 @@
 {% endblock %}
 {% block js_page %}
 <script>
+  function inactivar(id) {
+    var data = {id:id};
+    data = JSON.stringify(data);
+    var token = '{{csrf_token}}';
+    //alert(token);
+    //alert(id);
+    
+    $.ajax({
+      headers : {"X-CSRFToken": token},
+      type:"POST",
+      url:"/fac/clientes/estado/"+id,
+      data: data,
+      success: function(response){
+        if(response==="OK")
+        {
+          location.reload(true);
+        }
+        else{
+          mensaje("Error Intentado Cambiar Estado a Cliente");
+        }
+      },
+      error: function(jqXHR, textStatus, errorThrow){
+        console.log(textStatus, errorThrow);
+        mensaje(errorThrow,'red');
+        cerrar_modal();
+      }
+    });
+  }
 // Call the dataTables jQuery plugin
-$(document).ready(function() {
-  $('.table').DataTable();
-});
+// $(document).ready(function() {
+//  $('.table').DataTable();
+//});
 </script>
 {% endblock %}
