--- a/fac/templates/fac/facturas.html
+++ b/fac/templates/fac/facturas.html
@@ -156,7 +156,7 @@
                             <th class="all">Acciones</th>
                         </thead>
                         <tbody>
-                            {% for item in det%}
+                            {% for item in obj %}
                             <tr>
                                 <td>{{ item.id }}</td>
                                 <td>{{ item.producto }}</td>
@@ -182,14 +182,102 @@
 {% endblock %}
 {% block js_page %}
 <script>
+    function calcular_detalle()
+    {
+        var cant,prec,desc,stotal,total;
+
+        cant = $("#cantidad").val();
+        cant = cant==="" ? 0 : +cant;
+        cant = cant<0 ? 0 : cant;
+
+        prec =$('#precio').val();
+        prec = prec==="" ? 0 : +prec;
+        prec = prec<0 ? 0 : prec;
+
+        desc = $('#descuento_detalle').val();
+        desc = desc==="" ? 0 : +desc;
+        desc = desc<0 ? 0 : desc;
+
+        desc = desc>(cant * prec) ? 0 : desc;
+
+        stotal = cant * prec;
+        total  = stotal - desc;
+
+        $('#cantidad').val(cant);
+        $('#precio').val(prec);
+        $('#descuento_detalle').val(desc);
+
+        $('#sub_total_detalle').val(stotal);
+        $('#total_detalle').val(total);
+
+        console.log("Cantidad " + cant);
+        console.log("prec " + prec);
+        console.log("desc " + desc);
+
+        console.log("sub_total_detalle " + $('#sub_total_detalle').val());
+        console.log("total_detalle " + $('#total_detalle').val());
+
+    }
+
+    function buscarProducto()
+    {
+        if ($("#enc_cliente").val()==="0" || $("#enc_cliente").val()===null){
+            mensaje("Cliente No Seleccionado",'red');
+            return false;
+        }
+
+        var codigo = $("#codigo").val();
+        if(codigo===""){
+            return false;
+        }
+
+        var path = "{% url 'api:producto_list' %}" + codigo;
+        $.ajax({
+            type:"GET",
+            url: path,
+            success: function(r){
+                console.log(r);
+                console.log(r.existencia);
+                console.log(r.estado);
+
+                if(r.existencia<=0 || !r.estado){
+                    mensaje("Producto No Tiene Existencia o está inactivo",'orange')
+                    $("#codigo").val("");
+                    $("#descripcion").val("");
+                    $("#precio").val("0.00");
+                    $("#codigo").focus();
+                    return false;
+                }
+
+                $("#codigo").val(r.codigo);
+                $("#descripcion").val(r.descripcion);
+                $("#precio").val(r.precio);
+                $("#existencia").val(r.existencia);
+                $("#cantidad").focus();
+
+            },
+            error: function(a,b,c){
+                console.log(a);
+                if(a.status==404){
+                    mensaje("Producto -" + codigo + "- No Encontrado o No Existe",'red');
+                    $("#codigo").val("");
+                    $("#descripcion").val("");
+                    $("#precio").val("0.00");
+                    $("#codigo").focus();
+                }
+
+            }
+
+        });
+    }
 
     $(function () {
         $("#sidebarToggle").click();
-        $("#enc_cliente").select2({
+        $('#enc_cliente').select2({
             placeholder: "Seleccione Cliente",
             allowClear: true
         });
-        
+
         $("#btnBuscar").click(function(e){
             if ($("#enc_cliente").val()==="0"){
                 mensaje("Cliente No Seleccionado",'red');
@@ -197,6 +285,127 @@
             }
             abrir_modal("{% url 'fac:factura_producto' %}");
         });
+
+        $("#codigo").keypress(function(e){
+            if(e.keyCode===13){
+                e.preventDefault();
+                buscarProducto();
+            }
+        });
+
+        $('#cantidad,#precio,#descuento_detalle').change(function(){
+            calcular_detalle();
+        });
+
+        $("#enc_id").val("{{ enc.id }}");
+        $("#enc_cliente").val("{{ enc.cliente.id }}").change();
+        $("#fecha").val("{{ enc.fecha|date:'Y-m-d' }}");
+        $("#sub_total").val("{{ enc.sub_total }}");
+        $("#descuento").val("{{ enc.descuento }}");
+        $("#total").val({{ enc.total }});
+
+        // $('#enc_cliente').select2().select2('val', $('#enc_cliente option:eq(1)').val());
+        // https://select2.org/programmatic-control/add-select-clear-items
+        $("#enc_cliente").data('select2').trigger('select', {
+            data: {"id": 3}
+        });
+
+    });
+
+    function borrar_detalle(id)
+    {
+        // mensaje(id);
+        $.confirm({
+            theme:"modern",
+            icon:"fab fa-keycdn",
+            type:'red',
+            title: "Confirmación Requerida",
+            content: 'url:/fac/facturas/borrar-detalle/' + id,
+            onContentReady: function () {
+                var self = this;
+                this.$content.find('#usuario').val('{{ user.username }}');
+                this.$content.find('#usuario').select();
+                this.$content.find('#usuario').focus();
+            },
+            buttons:{
+                borrar:{
+                    text:"Borrar",
+                    btnClass:"btn btn-danger",
+                    action: function(){
+                        var usuario = this.$content.find('input#usuario');
+	                    var pass = this.$content.find('input#password');
+
+                        if(!usuario.val().trim()){
+                            mensaje("Usuario es requerido",'red');
+                            return false;
+                        }
+
+                        if(!pass.val().trim()){
+                            // $.alert({
+                            //     title:"Error",
+                            //     content: "Contraseña es Requerida",
+                            //     type: 'red'
+                            // });
+                            mensaje("Contraseña es Requerida","red");
+                            return false;
+                        }
+
+                        var data = {"usuario":usuario.val(),"pass":pass.val()};
+	                    console.log(data);
+
+                        var token = '{{csrf_token}}';
+                        $.ajax({
+                            headers: { "X-CSRFToken": token },
+                            type:"POST",
+                            data:data,
+                            url: '/fac/facturas/borrar-detalle/' + id,
+                            success: function(r){
+                                console.log(r);
+                                if(r==="ok"){
+                                    location.reload(true);
+                                }else{
+                                    mensaje(r,'red');
+                                }
+                            },
+                            error: function(a,b,c){
+                                mensaje(c);
+                            }
+                        });
+                    }
+                    },
+                cancelar: function(){}
+                }
+        });
+    }
+
+    $("form").submit(function(e){
+        var existencia = +$("#existencia").val();
+        var cantidad = +$("#cantidad").val();
+
+        if(cantidad>existencia){
+            mensaje("No hay existencia suficiente");
+            return false;
+        }
+    })
+
+    $("#btnEditCliente").click(function(e){
+        e.preventDefault();
+
+        var idCliente = $("#enc_cliente").val();
+        var url;
+        const qs = "?t=fc";
+        // alert(idCliente)
+
+        if(idCliente===null || idCliente===undefined){
+            url = "/fac/clientes/new" + qs;
+            //alert(url);
+            abrir_modal(url);
+        }else{
+            url = "/fac/clientes/" + idCliente + qs;
+            //alert(url);
+            abrir_modal(url);
+        }
+        var token = '{{csrf_token}}';
     });
 
 </script>
