--- a/fac/templates/fac/facturas.html
+++ b/fac/templates/fac/facturas.html
@@ -6,7 +6,7 @@
 <div class="card shadow mb-4">
     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
         <a href="#" class="btn btn-danger">Guardar</a>
-        <a href="#" class="btn btn-success">Imprimir</a>
+        <a href="{% url 'fac:factura_imprimir_one' enc.id %}" class="btn btn-success" target="_factura">Imprimir</a>
         <a href="{% url 'fac:factura_list' %}" class="btn btn-info">Cancelar</a>
     </div>
     <div class="card-body">
@@ -156,7 +156,7 @@
                             <th class="all">Acciones</th>
                         </thead>
                         <tbody>
-                            {% for item in obj %}
+                            {% for item in det %}
                             <tr>
                                 <td>{{ item.id }}</td>
                                 <td>{{ item.producto }}</td>
@@ -166,7 +166,10 @@
                                 <td>{{ item.descuento }}</td>
                                 <td>{{ item.total }}</td>
                             <td>
-                                <button type="button" class="btn btn-warning btn-circle"><i class="fas fa-history"></i></button>
+                                <button type="button" class="btn btn-warning btn-circle" 
+                                    onclick="borrar_detalle({{ item.id }})" >
+                                    <i class="fas fa-history"></i>
+                                </button>
                             </td>
                             </tr>
                             {% endfor %}
@@ -303,9 +306,7 @@
         $("#sub_total").val("{{ enc.sub_total }}");
         $("#descuento").val("{{ enc.descuento }}");
         $("#total").val({{ enc.total }});
-
-        // $('#enc_cliente').select2().select2('val', $('#enc_cliente option:eq(1)').val());
-        // https://select2.org/programmatic-control/add-select-clear-items
+        
         $("#enc_cliente").data('select2').trigger('select', {
             data: {"id": 3}
         });
@@ -314,7 +315,6 @@
 
     function borrar_detalle(id)
     {
-        // mensaje(id);
         $.confirm({
             theme:"modern",
             icon:"fab fa-keycdn",
@@ -341,11 +341,6 @@
                         }
 
                         if(!pass.val().trim()){
-                            // $.alert({
-                            //     title:"Error",
-                            //     content: "Contraseña es Requerida",
-                            //     type: 'red'
-                            // });
                             mensaje("Contraseña es Requerida","red");
                             return false;
                         }
@@ -394,15 +389,12 @@
         var idCliente = $("#enc_cliente").val();
         var url;
         const qs = "?t=fc";
-        // alert(idCliente)
 
         if(idCliente===null || idCliente===undefined){
             url = "/fac/clientes/new" + qs;
-            //alert(url);
             abrir_modal(url);
         }else{
             url = "/fac/clientes/" + idCliente + qs;
-            //alert(url);
             abrir_modal(url);
         }
         var token = '{{csrf_token}}';
