Proyecto Django, facturacion completa

--- a/cmp/templates/cmp/proveedor_form.html
+++ b/cmp/templates/cmp/proveedor_form.html
@@ -41,4 +41,34 @@
             </div>
         </form>
     </div>
-</div> 
+</div>
+
+<script>
+    $(function() {
+    
+        var url = $("form").attr("action");
+        var token = jQuery("[name=csrfmiddlewaretoken]").val();
+    
+        $("form").submit(function(e){
+            e.preventDefault();
+            var formData = $("form").serializeArray();
+            
+            $.ajax({
+                url:url,
+                method:"POST",
+                headers: {'X-CSRFToken': token },
+                data: formData
+            })
+            .done(function(r,textStatus,xhr){
+                if(xhr.status=200){
+                    location.reload(true);
+                }
+                else{
+                    mensaje(textStatus);
+                }
+            }).fail(function (error) {
+                    mensaje(error.responseText);
+            });
+        });
+    });
+    </script>
