Modificacion para borrar datos en las plantillas

--- a/inv/templates/inv/producto_form.html
+++ b/inv/templates/inv/producto_form.html
@@ -46,3 +46,11 @@
         </form>
     </div>
 </div>
+
+<script>
+    $(function() {
+        $("#id_categoria").val("{{ obj.subcategoria.categoria.id }}").change();
+        $("#id_subcategoria").val("{{ obj.subcategoria.id }}").change();
+        $("#id_subcategoria").chained("#id_categoria");
+    });
+</script>
