--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -190,7 +190,7 @@
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright &copy; EduardoWeb 2021</span>
+            <span>Copyright &copy; EduardoWebApp 2021</span>
           </div>
         </div>
       </footer>
